# oasis

./: .gitignore  .gitmodules  Dockerfile  README.md  makefile  oasis_constants.py  requirements.txt
.github/workflows/: cad.yml  electronics.yml  rust-code.yml  website.yml
cadquery/: README.md  blower_fan.py  honeycomb.py  oasis.py  util.py
code/: README.md
code/client/: Cargo.toml  README.md
code/client/src/: main.rs
code/demoserver/: Cargo.toml
code/demoserver/src/: main.rs
code/esp32/: .gitignore  Cargo.toml  partitions.csv  sdkconfig.defaults
code/esp32/.cargo/: config.toml
code/esp32/src/blinky/: main.rs
code/esp32/src/hardware_test/: main.rs
code/esp32/src/mistdriver/: main.rs
code/esp32/src/oasis/: index.html  main.rs
code/esp32/src/sht30test/: main.rs
code/esp32/src/terrarium/: effects.rs  lib.rs  real_terrarium.rs
code/terralib/: Cargo.toml
code/terralib/src/: cancel_context.rs  config.rs  controller.rs  influxdb.rs  lib.rs  terrarium.rs  types.rs
pcb/: .gitignore  README.md
pcb/fabricated-boards/ledboard-v0.3/: bom.csv  designators.csv  errata.md  netlist.ipc  positions.csv
pcb/fabricated-boards/ledboard-v0.3/kicad/: .gitignore  ledboard.kicad_pcb  ledboard.kicad_pro  ledboard.kicad_sch  ledboard.kicad_sch-bak  sym-lib-table
pcb/fabricated-boards/ledboard-v0.3/kicad/lib/: LDD-700LS.kicad_sym  LED_XTEAWT-00-0000-000000F51.kicad_mod  wire2board_smt_justin.kicad_mod
pcb/fabricated-boards/mainboard-v0.3/: bom.csv  designators.csv  errata.md  netlist.ipc  positions.csv
pcb/fabricated-boards/mainboard-v0.3/kicad/: pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  sym-lib-table
pcb/fabricated-boards/mainboard-v0.3/kicad/lib/: 10104111-0001LF--3DModel-STEP-533217.STEP  IHLP-inductor-vishay.kicad_mod  IX4427N.kicad_sym  MOLEX_47590-0001.kicad_mod  XTEARY-00-0000-000000L01.STEP  power_v18.kicad_sym
pcb/fabricated-boards/v0.2/: bom.csv  designators.csv  errata.md  git-commit.txt  netlist.ipc  positions.csv
pcb/fabricated-boards/v0.2/kicad/: .gitignore  fp-lib-table  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  sym-lib-table
pcb/fabricated-boards/v0.2/kicad/lib/: CD40109BNSR.kicad_sym  CUI_PJ-002A.kicad_mod  ESP32-C3-WROOM-02-N4.kicad_sym  LMR54406DBVR.kicad_sym  (+6 more)
pcb/ledboard/: layout.py  layout.yaml  ledboard.kicad_pcb  ledboard.kicad_pro  ledboard.kicad_sch
pcb/ledboard/lib/: LDD-700LS.step
pcb/main/: .gitignore  layout.py  layout.yaml  pcb.kicad_dru  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch
pcb/main/lib/: DC-IN-TH_XDJK-0051-025_JLC_C7498153.kicad_mod  JST_S2B-PH-SM4-TB.kicad_mod  SOT-23-3-pinswapped-mosfet.kicad_mod  TPS560430X3FDBVR.kicad_sym
website/: Dockerfile  README.md  go.mod  hugo.toml
website/assets/: _custom.scss
website/assets/js/: zoom.js
website/content/: _index.md
website/content/docs/: contact.md  hacking.md
website/content/docs/3dmodel/: _index.md
website/content/docs/build_guide/: _index.md
website/content/docs/electronics/: _index.md
website/content/docs/random_notes/: _index.md
website/content/docs/usage_guide/: _index.md
website/layouts/_default/_markup/: render-blockquote.html
(+2 files in other folders)
