[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
tokio = { version = "1", features = ["full"] }
terralib = { path = "../terralib" }
log = "0.4.26"
stderrlog = "0.6.0"
mdns-sd = "0.13.8"
itertools = "0.14.0"
anyhow = "1.0.98"
