[package]
name = "terralib"
edition = "2024"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
toml = "0.8.20"
anyhow = "1.0.96"
log = "0.4.27"
jiff = { version = "0.2.5", features = ["serde", "static-tz", "tzdb-bundle-always"] }
embassy-time = { version = "0.4.0", features = ["std"] }
embassy-sync = { version = "0.6.2", features = ["std"] }
embassy-futures = "0.1.1"
embassy-executor = "0.7.0"
